--- a/style.css
+++ b/style.css
@@ -253,7 +253,7 @@ footer {
     footer {
 
         height: auto;
-        width:1000%;
+        width:500vw;
         position:relative;
         font-size: 5px;
         margin-left: 80px;
