--- a/style.css
+++ b/style.css
@@ -168,8 +168,7 @@ footer {
 
 }
 
-
-@media screen and (max-width: 900px) {
+@media screen and (min-width: 320px) and (max-width: 767px) {
     body {
 
         display: flex;
@@ -246,8 +245,7 @@ footer {
 
         width: 10px;
         vertical-align: auto;
-        overflow: hidden;
-
+    
     }
 
     footer {
@@ -264,4 +262,204 @@ footer {
     }
     
 
+
+}
+
+
+
+@media screen and (min-width:768px) and (max-width: 1023px) {
+
+    body {
+
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        height: auto;
+        position:relative;
+
+    }
+
+    .title-one {
+
+        padding-left: 20%;
+        font-size: 30px;
+
+    }
+    
+    .title-two {
+
+        padding-left: 19%;
+        font-size: 25px;
+
+    }
+ 
+    button {
+
+        width: 300px;
+        height: 30px;
+        font-size: 20px;
+        margin-left: 23%;
+        margin-bottom: 2px;
+
+    }
+
+    .logo {
+
+        width: 150px;
+        margin-left: 32%;
+        margin-top: 10px;
+
+    }
+
+    .box-right {
+
+        position: relative;
+        margin-top: 120px;
+        margin-right: 35px;
+        width: 100px;
+    
+    }
+
+    .contato {
+
+        font-size: 15px;
+        margin-right: 35px;
+        
+    
+    }
+
+    .telephone {
+
+        width: 200px;
+        font-size: 20px;
+        vertical-align: auto;
+        margin-left: 10px;
+    }
+
+    span {
+
+        font-size: 10px;
+
+    }
+
+    .icon {
+
+        width: 20px;
+        vertical-align: auto;
+        
+
+    }
+
+    footer {
+
+        height: auto;
+        width:500vw;
+        position:relative;
+        font-size: 10px;
+        margin-left: 80px;
+        padding-left: 70px;
+        padding-right: 70px;
+        padding-bottom: 100%;
+
+    }
+
+
+
+}
+
+
+@media screen and (min-width:1024px) and (max-width: 1370px) {
+
+    body {
+
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        height: auto;
+        position:relative;
+
+    }
+
+    .title-one {
+
+        font-size: 30px;
+
+    }
+    
+    .title-two {
+
+        font-size: 25px;
+
+    }
+ 
+    button {
+
+        width: 300px;
+        height: 30px;
+        font-size: 20px;
+        margin-left: 20px;
+        margin-bottom: 2px;
+
+    }
+
+    .logo {
+
+        width: 150px;
+        margin-left: 85px;
+        margin-top: 10px;
+
+    }
+
+    .box-right {
+
+        position: relative;
+        margin-top: 120px;
+        margin-right: 380px;
+        width: 100px;
+    
+    }
+
+    .contato {
+
+        font-size: 15px;
+        margin-right: 40px;
+        
+    
+    }
+
+    .telephone {
+
+        width: 200px;
+        font-size: 20px;
+        vertical-align: auto;
+        margin-left: 10px;
+    }
+
+    span {
+
+        font-size: 10px;
+
+    }
+
+    .icon {
+
+        width: 20px;
+        vertical-align: auto;        
+
+    }
+
+    footer {
+
+        height: auto;
+        width:500vw;
+        position:relative;
+        font-size: 10px;
+        padding-right: 290px;
+        padding-bottom: 100%;
+
+    }
+
+   
 }
